--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -16,5 +16,5 @@ jobs:
         if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./cybsecmulhouse/.output/public/ls
+          publish_dir: ./cybsecmulhouse/.output/public/
            # deploy src folder
