--- a/cybsecmulhouse/package.json
+++ b/cybsecmulhouse/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@nuxt/ui": "latest",
+    "@nuxtjs/recaptcha": "^1.1.2",
     "nuxt": "^3.11.2",
+    "valibot": "^0.31.0-rc.7",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
