--- a/cybsecmulhouse/package.json
+++ b/cybsecmulhouse/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@chenfengyuan/vue-countdown": "2",
     "@intlify/vue-i18n-loader": "^4.2.0",
+    "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "latest",
     "@nuxtjs/i18n": "latest",
     "@nuxtjs/recaptcha": "^1.1.2",
