--- a/cybsecmulhouse/package.json
+++ b/cybsecmulhouse/package.json
@@ -24,7 +24,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.35.0",
+    "eslint-plugin-vue": "^10.4.0",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "vue-eslint-parser": "^10.2.0"
   }
 }
