--- a/cybsecmulhouse/package.json
+++ b/cybsecmulhouse/package.json
@@ -23,11 +23,14 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@nuxt/eslint": "^1.9.0",
+    "@nuxt/eslint-config": "^1.9.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.35.0",
     "eslint-plugin-vue": "^10.4.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "typescript": "^5.9.2",
     "vue-eslint-parser": "^10.2.0"
   }
 }
