--- a/cybsecmulhouse/package.json
+++ b/cybsecmulhouse/package.json
@@ -16,6 +16,7 @@
     "@nuxt/ui": "latest",
     "@nuxtjs/i18n": "latest",
     "@nuxtjs/recaptcha": "^1.1.2",
+    "caniuse-lite": "^1.0.30001743",
     "nuxt": "^3.11.2",
     "valibot": "^0.31.0-rc.7",
     "vue": "3",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/eslint-config": "^1.9.0",
+    "@stylistic/eslint-plugin": "^5.3.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.35.0",
     "eslint-plugin-vue": "^10.4.0",
